// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hyperlink should render a audio hyperlink 1`] = `
<a
  class="hyperlink audio"
  href="https://www.cerner.com"
>
  Audio hyperlink
  <span
    class="icon"
  >
    <svg
      aria-hidden="true"
      class="tui-Icon icon"
      focusable="false"
      height="1em"
      viewBox="0 0 48 48"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M29 0v48L15 34H0V14h15L29 0zm6.3 12.7l-2.1 2.1c2.3 2.3 3.8 5.6 3.8 9.2 0 3.6-1.5 6.8-3.8 9.2l2.1 2.1C38.2 32.4 40 28.4 40 24s-1.8-8.4-4.7-11.3zM41 7l-2.1 2.1C42.6 13 45 18.2 45 24c0 5.8-2.4 11-6.2 14.8L41 41c4.3-4.3 7-10.3 7-17s-2.7-12.6-7-17z"
      />
    </svg>
  </span>
</a>
`;

exports[`Hyperlink should render a default hyperlink 1`] = `
<a
  class="hyperlink default"
  href="https://www.cerner.com"
>
  Default hyperlink
</a>
`;

exports[`Hyperlink should render a disabled hyperlink 1`] = `
<span
  class="hyperlink default is-disabled"
>
  Disabled hyperlink
</span>
`;

exports[`Hyperlink should render a document hyperlink 1`] = `
<a
  class="hyperlink document"
  href="https://www.cerner.com"
>
  Document hyperlink
  <span
    class="icon"
  >
    <svg
      aria-hidden="true"
      class="tui-Icon icon"
      data-name="Layer 1"
      focusable="false"
      height="1em"
      viewBox="0 0 48 48"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M41.9 9.9l-8.8-8.8A3.12 3.12 0 0030.6 0H14.2A2.56 2.56 0 0012 2v5H7a2.57 2.57 0 00-2 2v37a2.24 2.24 0 002 2h26a2.07 2.07 0 002-2v-5h6.1a2.06 2.06 0 001.9-2V12a2.92 2.92 0 00-1.1-2.1zM31 3.2l9 8.8h-9zM32 45H8V10h4v29a2.25 2.25 0 002.1 2H32zm8-7H15V3h13v9a2.77 2.77 0 003.1 3H40z"
      />
    </svg>
  </span>
</a>
`;

exports[`Hyperlink should render a external hyperlink 1`] = `
<a
  class="hyperlink external"
  href="https://www.cerner.com"
  rel="noopener noreferrer"
  target="_blank"
>
  External hyperlink
  <span
    class="icon"
  >
    <svg
      aria-hidden="true"
      class="tui-Icon icon"
      focusable="false"
      height="1em"
      viewBox="0 0 48 48"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M39 25h6v23H0V3h23v6H6v33h33V25zm-21.4 9.6l24-24L48 17V0H31l6.4 6.4-24 24 4.2 4.2z"
      />
    </svg>
  </span>
</a>
`;

exports[`Hyperlink should render a image hyperlink 1`] = `
<a
  class="hyperlink image"
  href="https://www.cerner.com"
>
  Image hyperlink
  <span
    class="icon"
  >
    <svg
      aria-hidden="true"
      class="tui-Icon icon is-bidi"
      focusable="false"
      height="1em"
      viewBox="0 0 48 48"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 36v-6.5l8.7-8.7 11.6 11.6 8-8L42 32v4H6zm24.5-24c-1.9 0-3.5 1.6-3.5 3.5s1.6 3.5 3.5 3.5 3.5-1.6 3.5-3.5-1.6-3.5-3.5-3.5zM45 9v30H3V9h42m3-3H0v36h48V6z"
      />
    </svg>
  </span>
</a>
`;

exports[`Hyperlink should render a underline hidden hyperlink 1`] = `
<a
  class="hyperlink default is-underline-hidden"
  href="https://www.cerner.com"
>
  Underline hidden hyperlink
</a>
`;

exports[`Hyperlink should render a video hyperlink 1`] = `
<a
  class="hyperlink video"
  href="https://www.cerner.com"
>
  Video hyperlink
  <span
    class="icon"
  >
    <svg
      aria-hidden="true"
      class="tui-Icon icon is-bidi"
      focusable="false"
      height="1em"
      viewBox="0 0 48 48"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M48 10.9v26.3l-10-10v-6.3l10-10zm-13 .4C35 10 34 9 32.7 9H2.3C1 9 0 10 0 11.3v25.4C0 38 1 39 2.3 39h30.4c1.3 0 2.3-1 2.3-2.3V11.3z"
      />
    </svg>
  </span>
</a>
`;

exports[`Hyperlink should render with custom props 1`] = `
<a
  class="hyperlink default"
  href="https://www.cerner.com"
  rel="nofollow"
  target="_self"
>
  Custom props hyperlink
</a>
`;

exports[`Hyperlink should render with custom props with external variant 1`] = `
<a
  class="hyperlink external"
  href="https://www.cerner.com"
  rel="external"
  target="_parent"
>
  Custom target and rel props external hyperlink
  <span
    class="icon"
  >
    <svg
      aria-hidden="true"
      class="tui-Icon icon"
      focusable="false"
      height="1em"
      viewBox="0 0 48 48"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M39 25h6v23H0V3h23v6H6v33h33V25zm-21.4 9.6l24-24L48 17V0H31l6.4 6.4-24 24 4.2 4.2z"
      />
    </svg>
  </span>
</a>
`;
